# raspi_homelab_python_framework

./: .gitignore  README.md  bootstrap.py  pyproject.toml
bundle_specs/control-center.app.v1.7.1/: bundle.py  metadata.json
bundle_specs/control_center_bundle_v1_6_9/: README.md  bundle.py  metadata.json
bundle_specs/dictionary.app.v1.4.5/: README.md
bundle_specs/link-downloader.app.v1.0.9/: README.md  bundle.py  metadata.json
bundle_specs/link-downloader.app.v1.0.9/runtime/: app.py  docker-compose.yml
bundle_specs/music-player.app.v1.1.3/: README.md  metadata.json
bundle_specs/music-player.app.v1.1.3/runtime/: Dockerfile  app.py  docker-compose.yml
bundle_specs/music-player.app.v4.0.1/: README.md  bundle.py  metadata.json
bundle_specs/music-player.app.v5.2.2/: README.md  metadata.json
bundle_specs/music-player.app.v7.1.2/: README.md  metadata.json
config/: app_catalog.json
homelab_os/: __init__.py
homelab_os/core/: __init__.py  app.py  cli.py  config.py
homelab_platform/: web.py
homelab_platform/services/: bundle_installer.py  state.py
manifests/: installed_plugins.json  jobs.json  plugin_state.json
plugins/dictionary/: plugin.json
plugins/expense-tracker/: IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  plugin.json
plugins/files/: plugin.json
plugins/homarr/: plugin.json
plugins/link-downloader/: plugin.json
plugins/music-player/: plugin.json
plugins/personal-library/: plugin.json
plugins/pihole/: plugin.json
plugins/song-downloader/: plugin.json
plugins/status/: plugin.json
plugins/test_plugin/: plugin.json
(+130 files in other folders)
